public/css/temp.css
#content {
    height: inherit;
}

figcaption a span {
    font-size: 21px !important;
    font-weight: 400;
}

figcaption a {
    font-size: 16px !important;
    font-weight: 600;
}

figcaption a.address {
    font-size: 14px !important;
    font-weight: 600;
}

#content h3 {
    font-size: 21px;
}

#home section:nth-child(3) .big figure {
    height: inherit !important;
}

.hairfie-singleView#content .single-view #carousel-hairfie {
    height: inherit !important;
}

/* Fix car pas de bouton like pour le moment */
.hairfie-singleView#content .single-view .like-group .cta {
  width: 100%;
}

.salon#content section.salon-content section .coiffeur img {
  min-width: 100%;
  min-height: 100%;
}

.cal {
  width: 100%;
}

.cal caption {
    display: table-caption;
    font-size: 21px;
}

.cal thead {
    font-size: 12px;
}

.cal td {
    font-size: 16px;
}

/* Homepage Pro */
.dropdown-menu.login {
  right: 0;
  left: auto;
  min-width: 290px;
  padding: 10px;
  top: 57px;
}

.loading {
  width: 100%; height: 100%;
  background:url(/img/loader.gif) no-repeat center center;
}

.write-review {
  margin-top: 85px;
}

